<resources>
    <string name="app_name">OnTheProwl!</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>

    <string name="tab_one">TEAMS</string>
    <string name="tab_two">TEAM INFO</string>
    <string name="tab_three">ROBOT SPECS</string>
    <string name="event_hint">Event Name</string>

    <string name="header_team_info_one">TEAM INFO</string>
    <string name="header_team_info_two">DRIVE SQUAD</string>
    <string name="header_team_info_three">HUMAN PLAYER</string>
    <string name="team_name">Team Name</string>
    <string name="team_number">Team Number</string>
    <string name="team_location">Team Location</string>
    <string name="rookie_year">Rookie Year</string>
    <string name="notes">Notes</string>
    <string name="coach_mentor">Is coach a mentor?</string>
    <string name="driver_rate">Driver Experience:</string>
    <string name="hp_rate">Human Player Experience:</string>
    <string name="hp_question_one">Can load totes?</string>
    <string name="hp_question_two">Can load litter?</string>
    <string name="hp_question_three">Can throw litter?</string>

    <string name="num_competition"># Competition</string>
    <string name="team_site">Team Website</string>
    <string name="year">Year</string>
    <string name="robot_header_two">AUTONOMOUS</string>
    <string name="robot_header_one">ROBOT SPECS</string>
    <string name="robot_name">Robot Name</string>
    <string name="height">Height (in.)</string>
    <string name="weight">Weight (lbs.)</string>
    <string name="shoot_ball">Can shoot ball?</string>
    <string name="track_target">Can track target?</string>
    <string name="portcullis">Portcullis</string>
    <string name="cheval_de_frise">Cheval de Frise</string>
    <string name="drawbridge">Drawbridge</string>
    <string name="moat">Moat</string>
    <string name="ramparts">Ramparts</string>
    <string name="sallyport">Sallyport</string>
    <string name="rock_wall">Rock Wall</string>
    <string name="rough_terrain">Rough Terrain</string>
    <string name="low_bar">Low Bar</string>
    <string name="defense">Defenses</string>
    <string name="header_robot_three">TELEOP</string>
    <string name="climb_castle">Can Climb Castle?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_export">Export Data</string>
    <string name="action_import">Import Data</string>
</resources>
