<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.TeamFragment"
    android:layout_margin="@dimen/activity_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingTop="16dp"
                    android:text="@string/header_team_info_one"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-light"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorAccent"
                    android:layout_marginBottom="5dp"/>

                <EditText
                    android:id="@+id/website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/team_site"
                    android:gravity="end"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif-light"/>

                <EditText
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/team_location"
                    android:gravity="start"
                    android:layout_margin="5dp"
                    android:fontFamily="sans-serif-light"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/rookieYr"
                        android:hint="@string/rookie_year"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"
                        android:maxLength="4"
                        android:inputType="number"
                        android:layout_margin="5dp"
                        android:fontFamily="sans-serif-light"/>

                    <EditText
                        android:id="@+id/numCompetition"
                        android:hint="@string/num_competition"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:maxLength="1"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="sans-serif-light"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Awards"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-light"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/award1"
                        android:layout_margin="5dp"
                        android:spinnerMode="dropdown"
                        android:fontFamily="sans-serif-light"/>

                    <EditText
                        android:id="@+id/year1"
                        android:hint="@string/year"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLength="4"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="sans-serif-light"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/award2"
                        android:layout_margin="5dp"
                        android:spinnerMode="dropdown"
                        android:fontFamily="sans-serif-light"/>

                    <EditText
                        android:id="@+id/year2"
                        android:hint="@string/year"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLength="4"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="sans-serif-light"/>

                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/notes"
                    android:hint="@string/notes"
                    android:layout_margin="5dp"
                    android:minLines="7"
                    android:maxLines="9"
                    android:gravity="end|center"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-light"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingTop="16dp"
                    android:text="@string/header_team_info_two"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-light"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorAccent"
                    android:layout_marginBottom="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:text="@string/driver_rate"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:fontFamily="sans-serif-light"/>

                    <RatingBar
                        android:id="@+id/driverExp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:numStars="5"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="5dp"
                        android:text="@string/hp_rate"
                        android:textSize="18.5sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:fontFamily="sans-serif-light"/>

                    <RatingBar
                        android:id="@+id/humanExp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:numStars="5"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
